--- a/apps/learning-phase-4/pet-management-app/.env.example
+++ b/apps/learning-phase-4/pet-management-app/.env.example
@@ -8,3 +8,7 @@ DATABASE_URL="postgresql://postgres:[YOUR-PASSWORD]@db.[YOUR-PROJECT-REF].supaba
 
 # Next.js
 NEXT_PUBLIC_APP_URL=http://localhost:3000
+
+# AI API Keys
+GOOGLE_GEMINI_API_KEY=dummy
+HUGGINGFACE_API_KEY=dummy
